@@ -114,13 +114,6 @@ CURRENT RELEASE NOTES:
 
 RELEASE SHOWSTOPPERS:
 
-  * Commit /dist/httpd/patches/apply_to_2.0.63/CVE-2008-2364-patch-2.0.txt:
-    SECURITY: CVE-2008-2364 (cve.mitre.org)
-    mod_proxy_http: Better handling of excessive interim responses
-    from origin server to prevent potential denial of service and high
-    memory usage.
-    +1: trawick, wrowe, rpluem
-
   * Commit http://people.apache.org/~wrowe/CVE-2010-0434.patch
     SECURITY: CVE-2010-0434 (cve.mitre.org)
     note; simpler because we had not yet cleaned up input headers for subreq
